--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ authors = [
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0",
+    "pytest-asyncio>=0.23.0",
     "pytest-cov>=4.0",
     "ruff>=0.1.0",
     "networkx>=3.2.0",
@@ -25,6 +26,7 @@ telegram = [
     "googletrans>=4.0.0rc1",
     "pyyaml>=6.0",
     "pydantic>=2.5.0",
+    "aiosqlite>=0.19.0",
 ]
 
 telegram-full = [
