--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dev = [
     "pytest-asyncio>=0.21",
     "ruff>=0.1.0",
     "networkx>=3.2.0",
+    "pre-commit>=3.6.0",
+    "commitizen>=4.1.0",
 ]
 
 council = [
