--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ council = [
     "google-generativeai>=0.6.0",
     "openai>=1.0.0",
     "anthropic>=0.18.0",
+    "litellm>=1.0.0",
 ]
 
 enhancements = [
@@ -83,6 +84,7 @@ exclude = [
 
 [tool.ruff.lint]
 select = ["E", "F", "W"]
+ignore = ["E501", "E402", "E722", "E741", "F821"]
 
 [tool.ruff.lint.isort]
 known-first-party = ["src", "council"]
